--- a/plugins/woocommerce-admin/client/header/launch-your-store/style.scss
+++ b/plugins/woocommerce-admin/client/header/launch-your-store/style.scss
@@ -3,12 +3,19 @@
 	padding-left: 12px;
 }
 
+.woocommerce-lys-status-pill-wrapper {
+	display: inline-block;
+}
+
 .woocommerce-lys-status-pill {
+	display: flex;
+	align-items: center;
 	background-color: var(--gray-gray-5, #dcdcde);
 	color: #2c3338;
-	padding: 4px 10px;
+	padding: 0 3px 0 10px;
 	font-size: 12px;
 	font-weight: 500;
 	line-height: 20px;
 	border-radius: 4px;
+	height: 24px;
 }
