--- a/packages/js/product-editor/src/style.scss
+++ b/packages/js/product-editor/src/style.scss
@@ -48,6 +48,7 @@
 @import "components/prepublish-panel/style.scss";
 @import "components/require-password/styles.scss";
 @import "components/schedule-publish-modal/style.scss";
+@import "components/custom-fields/style.scss";
 
 /* Field Blocks */
 
