Hide the custom fields table base on the toggle value

--- a/packages/js/product-editor/src/blocks/product-fields/custom-fields-toggle/editor.scss
+++ b/packages/js/product-editor/src/blocks/product-fields/custom-fields-toggle/editor.scss
@@ -1,9 +1,15 @@
 .wp-block-woocommerce-product-custom-fields-toggle-field {
-	display: flex;
-	gap: $grid-unit;
-	align-items: center;
+	&__content {
+		display: flex;
+		gap: $grid-unit;
+		align-items: center;
 
-	.components-spinner {
-		margin: 0;
+		.components-spinner {
+			margin: 0;
+		}
+	}
+
+	&__inner-blocks {
+		margin-top: $grid-unit-60;
 	}
 }
