--- a/plugins/woocommerce-admin/client/marketplace/components/product-list-content/product-list-content.scss
+++ b/plugins/woocommerce-admin/client/marketplace/components/product-list-content/product-list-content.scss
@@ -12,6 +12,17 @@
 		color: $white;
 		height: 270px;
 	}
+
+	.woocommerce-customize-store-banner {
+		grid-column: 1 / -1;
+		display: block;
+		width: 100%;
+		margin: 16px 0;
+	}
+
+	.woocommerce-customize-store-banner-content {
+		margin-top: 63px;
+	}
 }
 
 @media screen and (min-width: $breakpoint-medium) {
