Integrate the CreateModal with the CustomFields component to add fields

--- a/packages/js/product-editor/src/components/custom-fields/style.scss
+++ b/packages/js/product-editor/src/components/custom-fields/style.scss
@@ -1,5 +1,6 @@
-@import "./empty-state/style.scss";
+@import "./create-modal/style.scss";
 @import "./edit-modal/style.scss";
+@import "./empty-state/style.scss";
 
 .woocommerce-product-custom-fields {
 	&__table {
