--- a/plugins/woocommerce-admin/client/customize-store/transitional/style.scss
+++ b/plugins/woocommerce-admin/client/customize-store/transitional/style.scss
@@ -73,63 +73,6 @@
 		}
 	}
 
-	.woocommerce-customize-store__transitional-site-preview-container {
-		border-radius: 16px;
-		margin-top: 50px;
-		background: #f6f7f7;
-		box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.02), 0 13px 10px 0 rgba(0, 0, 0, 0.03), 0 15px 20px 0 rgba(0, 0, 0, 0.04);
-		width: 600px;
-		height: 371px;
-
-		div {
-			position: relative;
-			border-radius: 24px;
-		}
-
-		.woocommerce-customize-store__edit-site-editor {
-			height: 100%;
-		}
-
-		.woocommerce-customize-store__block-editor {
-			position: relative;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			width: 100%;
-			height: 100%;
-		}
-
-		.interface-navigable-region {
-			overflow: hidden;
-		}
-
-		.auto-block-preview__container,
-		.block-editor-block-preview__content {
-			width: 588px;
-			height: 363px;
-			position: relative;
-		}
-
-		iframe {
-			border-radius: 24px;
-			width: 1176px;
-			height: 726px;
-			transform: scale(0.5);
-			left: -50%;
-			position: relative;
-			top: -50%;
-		}
-
-		&.is-loading {
-			@include placeholder();
-
-			iframe {
-				visibility: hidden;
-				opacity: 0.5;
-			}
-		}
-	}
-
 	.woocommerce-customize-store__transitional-actions {
 		display: flex;
 		flex-direction: row;
@@ -138,8 +81,6 @@
 
 		.woocommerce-customize-store__transitional-action {
 			display: flex;
-			flex-direction: column;
-			width: 280px;
 
 			h3 {
 				color: $gray-900;
@@ -173,6 +114,21 @@
 			}
 		}
 	}
+}
+
+.woocommerce-customize-store__transitional-action__icon,
+.woocommerce-customize-store__transitional-action__content {
+	flex: 1;
+}
+
+.woocommerce-customize-store__transitional-action__icon {
+	text-align: right;
+	max-width: 40px;
+	padding-right: 16px;
+}
+
+.woocommerce-customize-store__transitional-action__content {
+	max-width: 250px;
 }
 
 .woocommerce-ai-survey-modal {
