--- a/plugins/woocommerce-admin/client/customize-store/transitional/style.scss
+++ b/plugins/woocommerce-admin/client/customize-store/transitional/style.scss
@@ -30,14 +30,20 @@
 	}
 
 	.woocommerce-customize-store__transitional-content {
-		flex: 1;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		padding-top: 40px;
 
-		button {
+		.woocommerce-customize-store__transitional-buttons {
+			display: flex;
+			align-items: center;
 			margin-top: 20px;
+			gap: 20px;
+
+			.woocommerce-customize-store__transitional-preview-button {
+				flex: 1;
+			}
 		}
 	}
 
