--- a/plugins/woocommerce-admin/client/customize-store/transitional/style.scss
+++ b/plugins/woocommerce-admin/client/customize-store/transitional/style.scss
@@ -33,7 +33,8 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		padding-top: 40px;
+		justify-content: center;
+		padding: 40px;
 
 		.woocommerce-customize-store__transitional-buttons {
 			display: flex;
@@ -68,7 +69,7 @@
 		line-height: 24px; /* 150% */
 		letter-spacing: -0.1px;
 		margin: 4px 0 0;
-		width: 560px;
+		max-width: 560px;
 	}
 
 	.woocommerce-customize-store__transitional-main-actions-title {
@@ -85,6 +86,10 @@
 		display: flex;
 		gap: 20px;
 		flex-direction: row;
+
+		@media only screen and (max-width: 600px) {
+			flex-direction: column;
+		}
 
 		h3 {
 			margin: 0;
