--- a/plugins/woocommerce-admin/client/launch-your-store/status/style.scss
+++ b/plugins/woocommerce-admin/client/launch-your-store/status/style.scss
@@ -19,3 +19,9 @@
 	border-radius: 4px;
 	height: 24px;
 }
+
+.woocommerce-lys-status-dropdown .components-button {
+	padding: 0;
+	height: auto;
+	border-radius: 4px;
+}
