--- a/plugins/woocommerce-blocks/assets/js/atomic/blocks/product-elements/add-to-cart-form/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/atomic/blocks/product-elements/add-to-cart-form/style.scss
@@ -14,7 +14,6 @@
 		display: inline-block;
 		float: none;
 		margin-right: 4px;
-		margin-bottom: 10px;
 		vertical-align: middle;
 
 		.qty {
@@ -23,6 +22,10 @@
 			text-align: center;
 		}
 	}
+}
+
+.woocommerce div.product .wc-block-add-to-cart-form form.cart .quantity {
+	margin-bottom: 10px;
 }
 
 .woocommerce div.product .wc-block-add-to-cart-form form.cart button.single_add_to_cart_button {
